--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <ul class="nav navbar-nav">
                     <li><a class="active" href="#/home">Home <span class="sr-only">(current)</span></a></li>
                     <li><a href="#/browse">Browse</a></li>
+                    <li><a href="#/map">Map</a></li>
                 </ul>
                 <form id="login-form" class="navbar-form navbar-right">
                     <div class="form-group">
